--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   <title>Media inquiries</title>
 </head>
   <body class="page">
+    <menu class="menu">
+      <a class="menu__icon" href="#">&#9776</a>
+      <a class="menu__link" href="#">home</a>
+      <a class="menu__link" href="#">projects</a>
+      <a class="menu__link" href="#">contacts</a>
+      <a class="menu__link" href="#">about</a>
+    </menu>
     <div class="content">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa error inventore vitae veniam nulla ducimus voluptate! Est mollitia, delectus numquam obcaecati similique possimus repellat eligendi consequuntur, libero, harum eius perferendis?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda aliquid itaque, nam architecto culpa, sapiente autem quidem dolore dignissimos soluta veniam est unde officiis nobis labore tenetur. Suscipit, tenetur doloremque!
     </div>
   </body>
 </html>
